# hermes3d

./: .gitignore  AUTHORS  CMake.vars.example  CMakeLists.txt  README
benchmarks/: CMakeLists.txt
benchmarks/bessel/: forms.cpp  main.cpp
benchmarks/fichera/: forms.cpp  main.cpp
benchmarks/layer/: forms.cpp  main.cpp
cmake/: FindEXODUSII.cmake  FindMUMPS.cmake
common/: array.h  arrayptr.h  bitarray.h  callstack.cc  callstack.h  error.cpp  error.h  freqmap.h  hashmap.h  map.h  maphs.h  mapint.h  mapord.h  timer.cpp  timer.h  trace.cc  trace.h  utils.cpp  utils.h
doc/: Doxyfile.cmake  conf.py  conf.py.cmake  examples.rst  index.rst  install.rst
doc/examples/: bessel.rst  fichera-corner.rst  heat-conduction.rst  layer.rst  singpert-aniso.rst
doc/src/: benchmarks.rst  examples.rst  install.rst
doc/src/benchmarks/: bessel.rst  fichera-corner.rst  layer.rst
doc/src/examples/: elasto-statics.rst  heat-conduction.rst  singpert-aniso.rst
examples/: CMakeLists.txt
examples/bessel/: CMakeLists.txt  config.h.cmake  main.cc  main.cpp
examples/elastostatics/: CMakeLists.txt  main.cc  main.cpp
examples/fichera/: CMakeLists.txt  fichera.cc  main.cc  main.cpp
examples/heat-conduction/: CMakeLists.txt  main.cc  main.cpp
examples/heat-cubit/: CMakeLists.txt  main.cc  main.cpp
examples/layer/: CMakeLists.txt  layer.cc  main.cc  main.cpp
examples/singpert-aniso/: CMakeLists.txt  main.cc  main.cpp  singpert-aniso.cc
src/: CMakeLists.txt  asmlist.h  common.h  config.h.cmake  determinant.h  discrete_problem.cpp  discrete_problem.h  feproblem.cc  feproblem.cpp  feproblem.h  filter.cc  filter.cpp  filter.h  forms.cpp  forms.h  function.cpp  function.h  hermes3d.cc  hermes3d.cpp  hermes3d.h  linear_problem.cpp  linear_problem.h  linproblem.cc  linproblem.cpp  linproblem.h  matrix.cpp  matrix.h  mesh.cc  mesh.cpp  mesh.h  meshloader.h  norm.cpp  norm.h  order.h  output.h  precond.h  qsort.cpp  quad.h  quadcheb.cpp  quadcheb.h  (+28 more)
src/adapt/: h1.cc  h1.cpp  h1.h  h1proj.cc  h1proj.cpp  h1proj.h  h1projipol.cc  h1projipol.cpp  h1projipol.h  proj.cc  proj.h  projipol.cpp  projipol.h
src/integrals/: h1.h  hcurl.h
src/loader/: exodusii.cpp  exodusii.h  hdf5.cpp  hdf5.h  mesh3d.cc  mesh3d.cpp  mesh3d.h
src/output/: gmsh.cc  gmsh.cpp  gmsh.h  graph.cc  graph.cpp  graph.h  vtk.cc  vtk.cpp  vtk.h
src/precond/: ifpack.cc  ifpack.cpp  ifpack.h  ml.cc  ml.cpp  ml.h
src/shapeset/: common.h  h1lobattohex.cc  h1lobattohex.cpp  h1lobattohex.h  h1lobattotetra.cc  h1lobattotetra.cpp  h1lobattotetra.h  h1lobattotetradx.cpp  h1lobattotetrady.cpp  h1lobattotetradz.cpp  hcurllobattohex.cc  hcurllobattohex.cpp  hcurllobattohex.h  hex.h  lobatto.cc  lobatto.h  refmapss.cpp  refmapss.h  tetra.h
src/solver/: amesos.cc  amesos.cpp  amesos.h  aztecoo.cc  aztecoo.cpp  aztecoo.h  epetra.cc  epetra.cpp  epetra.h  mumps.cc  mumps.cpp  mumps.h  nox.cc  nox.cpp  nox.h  pardiso.cc  pardiso.cpp  pardiso.h  petsc.cc  petsc.cpp  petsc.h  umfpack.cc  umfpack.cpp  umfpack.h
src/space/: h1.cc  h1.cpp  h1.h  hcurl.cpp  hcurl.h
tests/: common.cmake
tests/adapt/: CMakeLists.txt
tests/adapt/h1-simple/: CMakeLists.txt  main.cc  main.cpp
tests/adapt/projection/: CMakeLists.txt  main.cc  main.cpp
tests/adapt/smooth/: CMakeLists.txt  main.cc  main.cpp
tests/calc/: CMakeLists.txt
tests/calc/hex-h1/: CMakeLists.txt  hex.cc  hex.cpp
tests/calc/hex-h1-1face/: CMakeLists.txt  main.cc  main.cpp
tests/calc/hex-h1-dirichlet/: CMakeLists.txt  hex-dirichlet.cc  hex-dirichlet.cpp
tests/calc/hex-h1-matfree/: CMakeLists.txt  hex-matfree.cc  hex-matfree.cpp
tests/calc/hex-h1-neumann/: CMakeLists.txt  hex-neumann.cc  hex-neumann.cpp
tests/calc/hex-h1-newton/: CMakeLists.txt  hex-newton.cc  hex-newton.cpp
tests/calc/hex-h1-nonlin/: CMakeLists.txt  hex-nonlin.cc  hex-nonlin.cpp
tests/calc/hex-h1-sys/: CMakeLists.txt  main.cc  main.cpp
tests/calc/hex-h1-sys-coupled/: CMakeLists.txt  main.cc  main.cpp
tests/calc/hex-h1-sys-dirichlet/: CMakeLists.txt  main.cc  main.cpp
tests/calc/hex-h1-unsym/: CMakeLists.txt  main.cc  main.cpp
tests/calc/hex-hcurl/: CMakeLists.txt  hex-hcurl.cc  hex-hcurl.cpp
tests/calc/hex-hcurl-cplx/: CMakeLists.txt  config.h.cmake  hex-hcurl-cplx.cc  hex-hcurl-cplx.cpp
tests/calc/hex-hcurl-imped/: CMakeLists.txt  config.h.cmake  hex-hcurl-imped.cc  hex-hcurl-imped.cpp
tests/calc/tetra-h1/: CMakeLists.txt  tetra.cc  tetra.cpp
tests/calc/tetra-h1-dirichlet/: CMakeLists.txt  tetra-dirichlet.cc  tetra-dirichlet.cpp
tests/calc/tetra-h1-neumann/: CMakeLists.txt  tetra-neumann.cc  tetra-neumann.cpp
tests/calc/tetra-h1-newton/: CMakeLists.txt  tetra-newton.cc  tetra-newton.cpp
tests/hang-nodes/: CMakeLists.txt
tests/hang-nodes/hex-h1/: CMakeLists.txt  hang-nodes-cont.cc  hang-nodes-cont.cpp
tests/hang-nodes/hex-hcurl/: CMakeLists.txt  hang-nodes-cont.cc  hang-nodes-cont.cpp
tests/judy-templates/: CMakeLists.txt  main.cpp
tests/linear-solvers/: CMakeLists.txt  main.cc  main.cpp
tests/mesh/: CMakeLists.txt
tests/mesh-loaders/: CMakeLists.txt  main.cc
tests/mesh/copy/: CMakeLists.txt  mesh-copy.cc  mesh-copy.cpp
tests/mesh/multi-mesh/: CMakeLists.txt  multi-mesh.cc  multi-mesh.cpp
tests/mesh/refinements/: CMakeLists.txt  refinements.cc  refinements.cpp
tests/mesh/regularize/: CMakeLists.txt  main.cc  main.cpp
tests/orders/: CMakeLists.txt  main.cc  main.cpp
tests/output/: CMakeLists.txt  main.cc  main.cpp
tests/quadrature/: CMakeLists.txt  main.cc  main.cpp
tests/refmap/: CMakeLists.txt  main.cc  main.cpp
tests/shapeset/: CMakeLists.txt
tests/shapeset/hex-h1/: CMakeLists.txt  cont.cc  cont.cpp  grad.cpp  graddir.cc  lindep.cc  lindep.cpp  main.cc  zero.cpp
tests/shapeset/hex-h1-lobatto-ced/: CMakeLists.txt  main.cc
tests/shapeset/hex-hcurl/: CMakeLists.txt  cont.cc  cont.cpp  grad.cc  grad.cpp  graddir.cc  lindep.cc  main.cc  zero.cpp
tests/timer/: CMakeLists.txt  main.cc  main.cpp
tools/mesh3d-to-hdf5/: CMakeLists.txt  main.cpp  mesh.cpp  mesh.h  mesh3dreader.cpp  mesh3dreader.h
tools/umfpack-solve/: CMakeLists.txt  main.cc
